main/t_and_c/css/style-blue.css
/* ... */
/* contact page */
.contact-address i {
  font-size: 1.1667em;
  color: #fff;
  background: #00a2ee;
  width: 2.5em;
  height: 2.5em;
  line-height: 2.5em;
  -webkit-border-radius: 50% 50% 50% 50%;
  -moz-border-radius: 50% 50% 50% 50%;
  -ms-border-radius: 50% 50% 50% 50%;
  border-radius: 50% 50% 50% 50%;
  color: #fff;
  text-align: center; }
.contact-address.style1 i {
  float: left;
  margin-top: 3px; }
.contact-address.style1 .details {
  border-bottom: 1px solid #edf6ff;
  margin-left: 50px; }
.contact-address.style1 li {
  margin-bottom: 15px; }
.contact-address.style2 {
  display: table;
  table-layout: fixed;
  float: none;
  margin: 0 auto;
  border-spacing: 30px 0;
  padding: 0;
  margin-bottom: 80px;
  margin-top: -140px; }
  .contact-address.style2 li {
    display: table-cell;
    vertical-align: top;
    width: 33.3333%;
    padding: 30px;
    border: 2px solid rgba(27, 66, 104, 0.1);
    text-align: center;
    background: #fff; }
  .contact-address.style2 .details {
    word-break: break-all; }
  .contact-address.style2 i {
    margin-bottom: 25px; }
  .contact-address.style2 h5 {
    margin-bottom: 25px; }
  .contact-address.style2 p:last-child {
    margin-bottom: 0; }

/* faq page */
.faqs {
  border-bottom: 1px solid #edf6ff; }
  .faqs .panel + .panel {
    margin-top: 0; }
  .faqs .panel-title .open-sub {
    float: left;
    font-family: FontAwesome;
    text-align: center;
    font-size: 10px;
    width: 22px;
    height: 22px;
    line-height: 21px;
    border: 1px solid #d4dde5;
    -webkit-border-radius: 50% 50% 50% 50%;
    -moz-border-radius: 50% 50% 50% 50%;
    -ms-border-radius: 50% 50% 50% 50%;
    border-radius: 50% 50% 50% 50%;
    text-indent: 1px;
    color: #d4dde5;
    margin-right: 30px; }
    .faqs .panel-title .open-sub:before {
      position: static;
      display: inline;
      content: "\f067";
      height: auto;
      margin: 0; }
  .faqs .panel-title a {
    color: #1b4268;
    line-height: 1;
    padding: 25px 30px;
    border: 1px solid #edf6ff;
    border-bottom: none; }
    .faqs .panel-title a.active {
      border-top: 1px solid #00a2ee; }
      .faqs .panel-title a.active .open-sub {
        border-color: #00a2ee;
        background: #00a2ee;
        color: #fff; }
        .faqs .panel-title a.active .open-sub:before {
          content: "\f068"; }
  .faqs .panel-content {
    padding: 30px 40px;
    background: #edf6ff; }

/* terms and conditions */
ul.filter-options li {
  background: #edf6ff;
  margin-bottom: 0;
  padding: 12px 20px 10px 55px; }
  ul.filter-options li:before {
    left: 15px;
    border: none;
    background: #fff;
    line-height: 22px; }
  ul.filter-options li + li {
    margin-top: 1px; }
  ul.filter-options li a {
    font-size: 1.0833em; }
    ul.filter-options li a:focus {
      color: #1b4268; }
  ul.filter-options li:hover a, ul.filter-options li.active a {
    color: #1b4268; }

/* 404 page */
.error404, .coming-soon-page, .blank-page {
  background: #edf6ff; }
  .error404 #page-wrapper, .coming-soon-page #page-wrapper, .blank-page #page-wrapper {
    margin: 0 auto;
    float: none;
    padding: 0;
    background: #fff;
    max-width: 830px; }
  .error404 .container, .coming-soon-page .container, .blank-page .container {
    max-width: 100%; }
  .error404 #main, .coming-soon-page #main, .blank-page #main {
    padding-left: 15px;
    padding-right: 15px;
    float: none;
    margin-left: auto;
    margin-right: auto; }
  .error404 #header, .coming-soon-page #header, .blank-page #header {
    position: relative;
    border: 1px solid #d4dde5;
    border-bottom: none;
    border-top: none; }
    .error404 #header .branding, .coming-soon-page #header .branding, .blank-page #header .branding {
      text-align: center; }
    .error404 #header .logo, .coming-soon-page #header .logo, .blank-page #header .logo {
      display: inline-block;
      margin-top: 35px; }
      .error404 #header .logo a, .coming-soon-page #header .logo a, .blank-page #header .logo a {
        color: inherit;
        font-weight: 600; }
  .error404 #content, .coming-soon-page #content, .blank-page #content {
    padding: 0;
    text-align: center;
    border: 1px solid #d4dde5;
    border-top: none; }
  .error404 .container, .coming-soon-page .container, .blank-page .container {
    max-width: 830px; }
  .error404 .error-message-404, .coming-soon-page .error-message-404, .blank-page .error-message-404 {
    text-align: center; }
    .error404 .error-message-404 span, .coming-soon-page .error-message-404 span, .blank-page .error-message-404 span {
      display: inline-block;
      font-weight: 200;
      font-size: 300px;
      color: #fff;
      text-shadow: 0 0 2px #d4dde5;
      line-height: 1;
      position: relative; }
      .error404 .error-message-404 span:before, .coming-soon-page .error-message-404 span:before, .blank-page .error-message-404 span:before {
        content: "404";
        position: relative;
        z-index: 1; }
      .error404 .error-message-404 span:after, .coming-soon-page .error-message-404 span:after, .blank-page .error-message-404 span:after {
        box-shadow: none;
        content: "404";
        display: inline-block;
        position: absolute;
        left: 8px;
        top: 8px;
        color: #d4dde5;
        z-index: 0; }
  .error404 .btn, .coming-soon-page .btn, .blank-page .btn {
    padding-left: 45px;
    padding-right: 45px;
    margin-bottom: 10px; }
  .error404 #footer, .coming-soon-page #footer, .blank-page #footer {
    background: #edf6ff; }
    .error404 #footer .copyright-area, .coming-soon-page #footer .copyright-area, .blank-page #footer .copyright-area {
      display: block;
      text-align: center;
      padding-top: 40px; }
/* ... */

